# petcircle

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  MANUAL_TESTING_GUIDE.md  Makefile  README.md  _chat.txt  bash.exe.stackdump  render.yaml
.claude/: CLAUDE.md  (+2 more)
backend/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/core/: constants.py  encryption.py  log_sanitizer.py  rate_limiter.py  security.py
backend/app/models/: __init__.py  conflict_flag.py  dashboard_token.py  diagnostic_test_result.py  document.py  message_log.py  order.py  order_recommendation.py  pet.py  pet_preference.py  preventive_master.py  preventive_record.py  reminder.py  shown_fun_fact.py  user.py
backend/app/routers/: admin.py  dashboard.py  internal.py  webhook.py
backend/envs/: .env.example  .env.production.example  .env.staging  .env.test
backend/scripts/: add_circle_and_new_items.sql  add_dashboard_medical_tracking.sql  add_doc_upload_deadline.sql  add_document_category.sql  add_order_recommendations.sql  add_orders.sql  add_source_wamid.sql  add_weight_flagged.sql  backfill_preventive_records.py  clear_database.py  clear_database.sql  create_shown_fun_facts.sql  enable_rls.py  fix_duplicate_users.py  migrate_orders_recommendations.py  run_dev.sh  seed_preventive_master.py  seed_reminder_test_data.py
backend/tests/: conftest.py  extraction_live_results.json  extraction_test_results.json  test_e2e.py  test_extraction_local.py  test_message_router_error_throttle.py  test_reminders.py
(+89 files in other folders)
